--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -8,7 +8,7 @@
   <body>
       <header class="main-header">
         <div class="container">
-                <a class="logo">
+                <a class="logo" href="index.html">
                     <img src="img/logo" alt="nёrds">
                 </a>
                 <nav class="main-navigation">
@@ -20,7 +20,7 @@
                             <a href="#">Клиенты</a>
                         </li>
                         <li>
-                            <a href="#">Магазин</a>
+                            <a href="catalog-nerds.html">Магазин</a>
                         </li>
                         <li>
                             <a href="#">Контакты</a>
@@ -97,27 +97,52 @@
                 </div>        
                 <div class="products-list">
                     <div class="products">
-                        <img src="#" alt="Aviator">
+                        <img src="img/products-aviator.jpg" width="240" height="240" alt="Aviator">
                         <div class="products-info">
-                            <h3 class="products-title"></h3>
-                            <p></p>
-                            <a href="#" class="btn products-btn"></a>
+                            <h3 class="products-title">Aviator</h3>
+                            <p>Одностраничный макет с авторским дизайном</p>
+                            <a href="#" class="btn products-btn">8000 р.</a>
                         </div>
                     </div>
                     <div class="products">
-                        <a class="products-img" href="#"><img src="#" alt="Sunset"><img href="#"></a>     
+                        <img src="img/products-sunset.jpg" width="240" height="240" alt="Sunset">
+                        <div class="products-info">
+                            <h3 class="products-title">Sunset</h3>
+                            <p>Интернет-магазин с личным кабинетом</p>
+                            <a href="#" class="btn products-btn">10000 р.</a>
+                        </div>                             
                     </div>
                     <div class="products">
-                        <a class="products-img" href="#"><img src="#" alt="Forte"><img href="#"></a>                        
+                        <img src="img/products-forte.jpg" width="240" height="240" alt="Forte">
+                        <div class="products-info">
+                            <h3 class="products-title">Forte</h3>
+                            <p>Отличный макет для личного блога</p>
+                            <a href="#" class="btn products-btn">5000 р.</a>
+                        </div>                                              
                     </div>
                     <div class="products">
-                        <a class="products-img" href="#"><img src="#" alt="Modern organic thai"><img href="#"></a>
+                        <img src="img/products-modernorganic.jpg" width="240" height="240" alt="Modern organic thai">
+                        <div class="products-info">
+                            <h3 class="products-title">Modern organic thai</h3>
+                            <p>Сайт для ресторана быстрого питания</p>
+                            <a href="#" class="btn products-btn">12000 р.</a>
+                        </div>                        
                     </div>
                     <div class="products">
-                        <a class="products-img" href="#"><img src="#" alt="Avenue"><img href="#"></a>
+                        <img src="img/products-avenue.jpg" width="239" height="240" alt="Avenue">
+                        <div class="products-info">
+                            <h3 class="products-title">Avenue</h3>
+                            <p>Макет для блога о путешествиях</p>
+                            <a href="#" class="btn products-btn">8000 р.</a>
+                        </div>                        
                     </div>
                     <div class="products">
-                        <a class="products-img" href="#"><img src="#" alt="Dovetail"><img href="#"></a>
+                        <img src="img/products-dovetail.jpg" width="239" height="240" alt="Dovetail">
+                        <div class="products-info">
+                            <h3 class="products-title">Dovetail</h3>
+                            <p>Интернет-магазин с галереей товаров</p>
+                            <a href="#" class="btn products-btn">14000 р.</a>
+                        </div>                          
                     </div>
                 </div>
                 <nav class="products-navigation">
