--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
       <header class="main-header">
         <div class="container">
-                <a class="logo">
+                <a class="logo" href="index.html">
                     <img src="img/logo" alt="nёrds">
                 </a>
                 <nav class="main-navigation">
@@ -20,7 +20,7 @@
                             <a href="#">Клиенты</a>
                         </li>
                         <li>
-                            <a href="#">Магазин</a>
+                            <a href="catalog-nerds.html">Магазин</a>
                         </li>
                         <li>
                             <a href="#">Контакты</a>
@@ -49,8 +49,8 @@
                 <div class slider-img>
                     <img src="#" alt="Долго, дорого, скрупулезно">                    
                 </div>
-                <div class-"slider-text">
-                     <h3>Долго, дорого, скрупулезно</h>
+                <div class="slider-text">
+                     <h3>Долго, дорого, скрупулезно</h3>
                      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>          
                 </div>                     
              </div>
@@ -58,8 +58,8 @@
                 <div class slider-img>
                     <img src="#" alt="Любите ли вы математику, как любим ее мы?">                    
                 </div>
-                <div class-"slider-text">
-                     <h3>Любите ли вы математику, как любим ее мы</h>
+                <div class="slider-text">
+                     <h3>Любите ли вы математику, как любим ее мы</h3>
                      <p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p>          
                 </div>                     
              </div>
@@ -67,8 +67,8 @@
                 <div class slider-img>
                     <img src="#" alt="Только наркотики, только хардкор!">                    
                 </div>
-                <div class-"slider-text">
-                     <h3>Только наркотики, только хардкор!</h>
+                <div class="slider-text">
+                     <h3>Только наркотики, только хардкор!</h3>
                      <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</p>          
                 </div>                     
              </div>
@@ -80,31 +80,19 @@
                 <article class="direction">
                     <a href="#" class="direction-img"><img src="#" alt="веб-сайты"></a>
                     <h2 class="direction-title">Веб-сайты</h2>
-                    <p>
-                        Мир никогда не будет прежним
-                        <br>
-                        после того как увидит ваш сайт
-                    </p>                   
+                    <p>Мир никогда не будет прежним после того как увидит ваш сайт</p>                   
                     <a class="btn direction-btn" href="#">Заказать</a>
                 </article>
                 <article class="direction">
                     <a href="#" class="direction-img"><img src="#" alt="приложения"></a>
                     <h2 class="direction-title">Приложения</h2>
-                    <p>
-                        Покорите топ-10 приложений
-                        <br>
-                        в AppStrore и Google Play
-                    </p>
+                    <p>Покорите топ-10 приложений в AppStrore и Google Play</p>
                     <a class="btn direction-btn btn-green" href="#">Заказать</a>                    
                 </article>
                 <article class="direction">
                     <a href="#" class="direction-img"><img src="#" alt="презентации"></a>                    
                     <h2 class="direction-title">Презентации</h2>
-                    <p>
-                        Вы даже не подозреваете,
-                        <br>
-                        насколько вы изумительны!
-                    </p>
+                    <p>Вы даже не подозреваете, насколько вы изумительны!</p>
                     <a class="btn direction-btn btn-yellow" href="#">Заказать</a>                     
                 </article>
               </div>
@@ -112,11 +100,7 @@
                 <div class="about-block">
                     <div class="about-left">
                         <h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
-                        <p>
-                            Исповедуем принципы минимализма и чистоты. Ставим математический
-                            <br>
-                            расчет выше креатива. Работаем не покладая рук, как роботы.
-                        </p>
+                        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
                     </div>
                     <div class="about-right">
                         <img src="#" alt="nёrd's since 2004">
