--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -20,10 +20,7 @@
                             <a href="#">Клиенты</a>
                         </li>
                         <li>
-                            <a href="catalog-nerds.html">Магазин</a>
-                        </li>
-                        <li>
-                            <a href="#">Контакты</a>
+                            <a href="catalog-nerds.html"><span class="active">Магазин</span></a>
                         </li>
                         <li>
                             <a href="#">Контакты</a>
