--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>HTML Academy: Нёрдс</title>
         <link href="css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <header class="main-header">
@@ -30,45 +31,53 @@
                 <div class="basket-block">
                     <a class="basket" href="#">Корзина</a>
                 </div>
-                <div class="clear"></div>
             </div>
         </header>    
-        <div class="slider">                
-            <input type="radio" id="btn-1" name="toggle" checked>
-            <input type="radio" id="btn-2" name="toggle">
-            <input type="radio" id="btn-3" name="toggle">               
-            <div class="slider-controls">                    
-                <label for="btn-1"></label>
-                <label for="btn-2"></label>
-                <label for="btn-3"></label>                       
-            </div>
-            <div class="slider-inner">
-                <div class="slider-items">
-                    <div class slider-img>
-                        <img src="#" alt="Долго, дорого, скрупулезно">                    
-                    </div>
-                    <div class="slider-text">
-                        <h3>Долго, дорого, скрупулезно</h3>
-                        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>          
-                    </div>                     
+        <div class="slider">  
+            <div class="container">
+                <input type="radio" id="btn-1" name="toggle" checked>
+                <input type="radio" id="btn-2" name="toggle">
+                <input type="radio" id="btn-3" name="toggle">               
+                <div class="slider-controls">                    
+                    <label for="btn-1"></label>
+                    <label for="btn-2"></label>
+                    <label for="btn-3"></label>                       
                 </div>
-                <div class="slider-items">
-                    <div class slider-img>
-                        <img src="#" alt="Любите ли вы математику, как любим ее мы?">                    
+                <div class="slider-inner">
+                    <div class="slider-items clearfix">
+                        <div class="slider-text">
+                            <h3>Долго, дорого,<br> скрупулезно.</h3>
+                            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+                            <a href="#" class="btn slider-btn">Узнать больше</a>
+                        </div>
+                        <div class="slider-img">
+                            <img src="img/slider1.png" width="340" height="310" alt="Долго, дорого, скрупулезно">                    
+                        </div>                                             
                     </div>
-                    <div class="slider-text">
-                        <h3>Любите ли вы математику, как любим ее мы</h3>
-                        <p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p>          
-                    </div>                     
-                </div>
-                <div class="slider-items">
-                    <div class slider-img>
-                        <img src="#" alt="Только наркотики, только хардкор!">                    
+                    <!--
+                    
+                    <div class="slider-items clearfix">
+                        <div class="slider-text">
+                            <h3>Любите ли вы математику,<br> как любим ее мы</h3>
+                            <p>Нашим дизайнерам мы удаляем нейроны, ответственные<br> за креатив, чтобы дать им возможность все просчитать</p>
+                            <a href="#" class="btn slider-btn">Узнать больше</a>
+                        </div>
+                        <div class="slider-img">
+                            <img src="img/slider2.png" width="340" height="310" alt="Любите ли вы математику, как любим ее мы?">                    
+                        </div>
                     </div>
-                    <div class="slider-text">
-                        <h3>Только наркотики, только хардкор!</h3>
-                        <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</p>          
-                    </div>                     
+                    <div class="slider-items clearfix">
+                        <div class="slider-text">
+                            <h3>Только наркотики,<br> только хардкор!</h3>
+                            <p>Все дизайнерские решения в нашей компании принимаются<br> только под воздействием качественных галлюциногенов</p>
+                            <a href="#" class="btn slider-btn">Узнать больше</a>
+                        </div>
+                        <div class="slider-img">
+                            <img src="img/slider3.png" width="340" height="310" alt="Только наркотики, только хардкор!">                    
+                        </div>                                             
+                    </div>
+                    
+                    -->
                 </div>
             </div>
         </div>
@@ -132,25 +141,21 @@
           </div>
       </main>
           <footer>
-            <div class="map">
-                <img src="#" alt="map">
-                <div class="container">
+            <div class="footer-map">
+                <div class="map">
+                    <img src="img/map.jpg" width="1199" height="416" alt="map">
+                </div>
+                <div class="container clearfix">
                     <div class="contacts">
                         <h3>Nёrds design studio</h3>
-                        <p>
-                            191186, Санкт-Петербург,
-                            <br>
-                            ул. Б.Конюшечная, д. 19/8
-                        </p>
-                        <p>
-                            Телефон: +7 (812) 275-75-75
-                        </p>
+                        <p>191186, Санкт-Петербург,<br> ул. Б.Конюшечная, д. 19/8</p>
+                        <p>Телефон: +7 (812) 275-75-75</p>
                         <a class="btn contacts-btn" href="#">Напишите нам</a>
                     </div>
                 </div>
             </div>  
             <div class="footer-social">                    
-               <div class="container"> 
+               <div class="container clearfix"> 
                     <div class="social-icon">
                         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
                         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
@@ -158,7 +163,7 @@
                     </div>    
                     <div class="social-tagline">
                         <p class="social-title">Давайте дружить, это выгодно!</p>
-                        <p>Скидка 10% для друзей из социальных сетей</p>
+                        <p>Скидка 10% для друзей из социальных сетей.</p>
                     </div>
                 </div>  
             </div>                       
