--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -52,11 +52,9 @@
                         <label>
                             <input class="filter-radio" type="radio" name="grid" value="adaptive"> <span>Адаптивная</span>
                         </label>
-                        <br>
                         <label>
                             <input class="filter-radio" type="radio" name="grid" value="fixed"> <span>Резиновая</span>
                         </label>
-                        <br>
                         <label>
                             <input class="filter-radio" type="radio" name="grid" value="rubber"> <span>Резиновая</span>
                         </label>          
@@ -66,19 +64,15 @@
                         <label>
                             <input class="filter-checkbox" type="checkbox" name="features" value="slider"> <span>Слайдер</span>
                         </label>
-                        <br>
                         <label>
                             <input class="filter-checkbox" type="checkbox" name="features" value="advantages-block"> <span>Блок преимуществ</span>
                         </label>
-                        <br>
                         <label>
                             <input class="filter-checkbox" type="checkbox" name="features" value="news"> <span>Новости</span>
                         </label>
-                        <br>
                         <label>
                             <input class="filter-checkbox" type="checkbox" name="features" value="gallery"> <span>Галерея</span>
                         </label>
-                        <br>
                         <label>
                             <input class="filter-checkbox" type="checkbox" name="features" value="basket"> <span>Корзина</span>
                         </label>                        
@@ -95,8 +89,8 @@
                         <a href="#" class="sort">по функционалу</a>
                     </div>
                     <div class="sorting-dir">
-                        <a href="#" class="up"><img src="#" alt="далее"></a>
-                        <a href="#" class="down"><img src="#" alt="назад"></a>
+                        <a href="#" class="up"></a>
+                        <a href="#" class="down"></a>
                     </div>
                 </div>        
                 <div class="products-list clearfix">
